--- a/Kotlin/basic/app/src/main/res/layout/activity_join.xml
+++ b/Kotlin/basic/app/src/main/res/layout/activity_join.xml
@@ -1,86 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".auth.JoinActivity">
-
+<layout>
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:background="@color/mainColor"
-        android:layout_height="150dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".auth.JoinActivity">
 
-        <TextView
-            android:text="회원가입"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:textColor="#000000"
-            android:textSize="20sp"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp" />
+            android:background="@color/mainColor"
+            android:layout_height="150dp">
+
+            <TextView
+                android:text="회원가입"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="#000000"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="50dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/emailArea"
+                android:hint="email"
+                style="@style/AuthEditText"
+                android:background="@android:color/transparent"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"  />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:background="#999999"/>
+
+            <EditText
+                android:id="@+id/passwordArea"
+                android:inputType="textPassword"
+                android:hint="password"
+                style="@style/AuthEditText"
+                android:background="@android:color/transparent"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"  />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:background="#999999"/>
+
+            <EditText
+                android:id="@+id/passwordcheck"
+                android:inputType="textPassword"
+                android:hint="password check"
+                style="@style/AuthEditText"
+                android:background="@android:color/transparent"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"  />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:background="#999999"/>
+
+            <Button
+                android:id="@+id/joinAction"
+                android:layout_margin="20dp"
+                android:text="회원가입하기"
+                android:background="@drawable/background_radius_yellow"
+                android:layout_width="match_parent"
+                android:layout_height="50dp" />
+
+        </LinearLayout>
 
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:orientation="vertical">
-
-        <EditText
-            android:hint="email"
-            style="@style/AuthEditText"
-            android:background="@android:color/transparent"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"  />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:background="#999999"/>
-
-        <EditText
-            android:inputType="textPassword"
-            android:hint="password"
-            style="@style/AuthEditText"
-            android:background="@android:color/transparent"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"  />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:background="#999999"/>
-
-        <EditText
-            android:inputType="textPassword"
-            android:hint="password check"
-            style="@style/AuthEditText"
-            android:background="@android:color/transparent"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"  />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:background="#999999"/>
-
-        <Button
-            android:layout_margin="20dp"
-            android:text="회원가입하기"
-            android:background="@drawable/background_radius_yellow"
-            android:layout_width="match_parent"
-            android:layout_height="50dp" />
-
-    </LinearLayout>
-
-</LinearLayout>
+</layout>
