--- a/Kotlin/basic/app/src/main/res/layout/fragment_tip.xml
+++ b/Kotlin/basic/app/src/main/res/layout/fragment_tip.xml
@@ -11,6 +11,91 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <!-- 네비게이션 상단의 공간 -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="70dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:weightSum="3"
+                    android:layout_height="150dp">
+
+                    <ImageView
+                        android:id="@+id/category1"
+                        android:src="@drawable/main_icon_all"
+                        android:layout_weight="1"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp" />
+
+                    <ImageView
+                        android:id="@+id/category2"
+                        android:src="@drawable/main_icon_cook"
+                        android:layout_weight="1"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp" />
+
+                    <ImageView
+                        android:src="@drawable/main_icon_economy"
+                        android:layout_weight="1"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:weightSum="3"
+                    android:layout_height="150dp">
+
+                    <ImageView
+                        android:src="@drawable/main_icon_hobby"
+                        android:layout_weight="1"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp" />
+
+                    <ImageView
+                        android:src="@drawable/main_icon_interior"
+                        android:layout_weight="1"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp" />
+
+                    <ImageView
+                        android:src="@drawable/main_icon_life"
+                        android:layout_weight="1"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:weightSum="3"
+                    android:layout_height="150dp">
+
+                    <ImageView
+                        android:src="@drawable/main_icon_oneroom"
+                        android:layout_weight="1"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp" />
+
+                    <ImageView
+                        android:src="@drawable/main_icon_else"
+                        android:layout_weight="1"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp" />
+
+                    <ImageView
+                        android:layout_weight="1"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="3dp"
