--- a/Kotlin/basic/app/src/main/res/layout/activity_board_write.xml
+++ b/Kotlin/basic/app/src/main/res/layout/activity_board_write.xml
@@ -67,6 +67,7 @@
                 android:background="@color/black"/>
 
             <ImageView
+                android:id="@+id/imageArea"
                 android:src="@drawable/plusbtn"
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
